# SkibidiScript

./: Cargo.toml  EXAMPLES.md  README.md
src/: find_files.rs  keywords.rs  main.rs  transpile_file.rs  transpile_to_js.rs
src/TEST_INPUT/: component.js  component.skibidi  invalid.ts  isOdd.js  isOdd.skibidi
