[package]
name = "skibidiscript"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
oxc = { version = "*", features = ["full"] }
oxc_span = "0.39.0"
oxc_parser = "0.39.0"
oxc_allocator = "0.39.0"
oxc_codegen = "0.39.0"
oxc_semantic = "0.39.0"
oxc_transformer = "0.39.0"
pico-args = "0.5.0"
